--- a/Code Practice/WEEK02- DAY01 - 31st DEC- SATURDAY/package.json
+++ b/Code Practice/WEEK02- DAY01 - 31st DEC- SATURDAY/package.json
@@ -10,6 +10,8 @@
   "author": "vaibhav",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
