--- a/Code Practice/WEEK04- DAY01 - 14th JAN- SATURDAY/package.json
+++ b/Code Practice/WEEK04- DAY01 - 14th JAN- SATURDAY/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "week04--day01---14th-jan--saturday",
+  "name": "week03--day02---8th-jan--sunday",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +14,11 @@
   "devDependencies": {
     "parcel": "^2.8.3",
     "postcss": "^8.4.23",
+    "process": "^0.11.10",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
 }
